--- a/templates/privacy.html.j2
+++ b/templates/privacy.html.j2
@@ -6,14 +6,17 @@
 
       <h2 class="border-bottom pb-2 mb-4">Privacy Policy</h2>
 
-      <p class="lead">This Privacy Policy describes how Mini Social collects, uses, and shares information when you use our website/application.</p>
+      <p class="lead">This Privacy Policy describes how Mini Social collects, uses, and shares information when you use
+        our website/application.</p>
 
       <h3 class="mt-5">Information We Collect</h3>
       <p>We collect the following types of information:</p>
 
       <ul class="list-group">
-        <li class="list-group-item"><strong>Usage Data:</strong> We automatically collect data about how you use our website/application, including pages visited and features used.</li>
-        <li class="list-group-item"><strong>Device Information:</strong> We collect information about the device you use to access our website/application, such as operating system and browser type.</li>
+        <li class="list-group-item"><strong>Usage Data:</strong> We automatically collect data about how you use our
+          website/application, including pages visited and features used.</li>
+        <li class="list-group-item"><strong>Device Information:</strong> We collect information about the device you use
+          to access our website/application, such as operating system and browser type.</li>
       </ul>
 
       <h3 class="mt-5">How We Use Your Information</h3>
@@ -28,10 +31,12 @@
       <p>We do not sell, rent, or share your personal information with third parties for marketing purposes.</p>
 
       <h3 class="mt-5">Data Security</h3>
-      <p>We take reasonable measures to protect your information from unauthorized access, use, or disclosure. However, no data transmission over the internet is guaranteed to be completely secure.</p>
+      <p>We take reasonable measures to protect your information from unauthorized access, use, or disclosure. However,
+        no data transmission over the internet is guaranteed to be completely secure.</p>
 
       <h3 class="mt-5">Your Rights</h3>
-      <p>You have the right to access and correct your personal data. Please contact us if you wish to exercise this right.</p>
+      <p>You have the right to access and correct your personal data. Please contact us if you wish to exercise this
+        right.</p>
 
     </div>
   </div>
